# steelhead

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  README.md  WORKFLOW.md  package.xml  quick_setup_traj_testing.sh  requirements.txt  steelhead.sdf
src/spiderfish_example/: CMakeLists.txt  package.xml
src/spiderfish_example/include/spiderfish_example/: component_one.hpp  component_two.hpp
src/spiderfish_example/launch/: example_launch.py
src/steelhead_claw/: CMakeLists.txt  README.md  package.xml
src/steelhead_claw/launch/: claw_launch.py  claw_only.launch.py  gazebo_claw_sim.launch.py  steelhead_with_claw.launch.py
src/steelhead_claw/src/: claw_controller.cpp  claw_hardware_interface.cpp  claw_teleop.cpp  gazebo_claw_plugin.cpp
src/steelhead_claw/urdf/: claw.urdf.xacro
src/steelhead_example/: CMakeLists.txt  README.md  package.xml
src/steelhead_example/include/steelhead_example/: component_one.hpp  component_two.hpp
src/steelhead_example/launch/: example_launch.py
src/steelhead_example/src/: component_one.cpp  component_two.cpp
src/steelhead_example/test/: test_example_launch.py
src/steelhead_gate/: CMakeLists.txt  README.md  package.xml
src/steelhead_gate/config/: gate_detection.rviz
src/steelhead_gate/include/steelhead_gate/: gate_detector.hpp  pole_featurizer.hpp
src/steelhead_gate/launch/: gate_detector_launch.py
src/steelhead_gate/src/: gate_detector.cpp
src/steelhead_gazebo/: CMakeLists.txt  README.md  package.xml
src/steelhead_gazebo/config/: rviz_config.rviz  rviz_ukf_teleop_sim_config.rviz
src/steelhead_gazebo/gazebo_utils/include/: gazebo_utils.hpp
src/steelhead_gazebo/gazebo_utils/src/: gazebo_utils.cpp
src/steelhead_gazebo/include/steelhead_gazebo/: actuators_command_simulation.hpp  bounding_box_plugin.hpp  camera_orbit_plugin.hpp  ground_truth_sensor.hpp  hydrodynamics_plugin.hpp  pressure_sensor.hpp  random_camera_plugin.hpp  smooth_camera_plugin.hpp  thruster_driver_plugin.hpp  torpedo_plugin.hpp  underwater_camera.hpp  underwater_camera_effects.hpp
src/steelhead_gazebo/include/triton_gazebo/: bounding_box_plugin.hpp  camera_orbit_plugin.hpp
src/steelhead_gazebo/launch/: actuators_simulation_launch.py  gate_navigation_test.py  gate_navigation_test_launch.py  gate_navigation_test_triton_mini.py  gazebo_launch.py  gendata_launch.py  path_follow_test_launch.py  predetermined_route_test_launch.py  rviz_launch.py  slalom_navigation_launch.py  train_yolo_launch.py  ukf_teleop_sim_launch.py  underwater_camera_launch.py  underwater_effects_launch.py  waypoint_pid_test_launch.py  waypoint_test_launch.py
src/steelhead_gazebo/math_utils/include/: math_utils.hpp
src/steelhead_gazebo/math_utils/src/: math_utils.cpp
src/steelhead_gazebo/models/barbarabox/: model.sdf
src/steelhead_gazebo/src/: actuators_command_simulation.cpp  bounding_box_plugin.cpp  camera_orbit_plugin.cpp  ground_truth_sensor.cpp  hydrodynamics_plugin.cpp  pressure_sensor.cpp  random_camera_plugin.cpp  smooth_camera_plugin.cpp  thruster_driver_plugin.cpp  torpedo_impulse_plugin.cpp  torpedo_plugin.cpp  underwater_camera.cpp  underwater_camera_effects.cpp
src/steelhead_gazebo/steelhead_gazebo/: bounding_box_image_saver.py  clean_data.py  ippe.py  nav.py  odom_relay.py  slalom_navigator.py  train_yolo.py  yolo_detector.py
src/steelhead_gazebo/test/: test_gazebo_launch.py  test_underwater_camera_launch.py
src/steelhead_gazebo/worlds/: competition.world  competition_gate.world  competition_slalom.world  competition_task_dropper.world  competition_task_gate.world  competition_task_octagon.world  competition_task_slaloms.world  competition_task_torpedo.world  competition_triton_mini.world  cube.world  gate_test.world  path_follow.world  prequalification.world  steelhead_gate_world.world  test.world  thruster_test.world  triton_auv.world  uc_gendata.world  uc_test.world
src/steelhead_localization/: CMakeLists.txt  README.md  package.xml
src/steelhead_localization/config/: state_estimator_config.yaml  steelhead_gazebo_vins_config.yaml
src/steelhead_localization/launch/: state_estimator_launch.py  vins_odometry_launch.py
src/steelhead_mission_planner/: CMakeLists.txt  README.md  package.xml
src/steelhead_mission_planner/config/: mission_tree.yaml
src/steelhead_mission_planner/launch/: mission_planner.launch.py
src/steelhead_mission_planner/src/: mission_planner.cpp
src/steelhead_object_recognition/: CMakeLists.txt  README.md  package.xml
src/steelhead_object_recognition/config/: custom_yolov4.yaml
src/steelhead_object_recognition/launch/: tiny_yolov3_launch.py  tiny_yolov4_launch.py  tiny_yolov4_realsense_launch.py  yolo_detector_launch.py
src/steelhead_object_recognition/src/: object_recognizer.cpp
src/steelhead_object_recognition/steelhead_object_recognition/: yolo_detector.py
src/steelhead_object_recognition/test/: test_object_recognition_launch.py
src/steelhead_slaloms/: CMakeLists.txt  README.md  package.xml
src/steelhead_slaloms/config/: slalom_detection.rviz
src/steelhead_slaloms/include/: slalom_detector.hpp
src/steelhead_slaloms/launch/: slalom_detector_launch.py
src/steelhead_slaloms/src/: slalom_detector.cpp
src/steelhead_tasks/: CMakeLists.txt  README.md  package.xml
src/steelhead_tasks/config/: force_up.yaml  forward_drive.yaml  navigate_backwards.yaml  navigate_forward.yaml  pitch_flip.yaml  stay_still.yaml  style_spin.yaml  sway_left.yaml  sway_right.yaml  upward_drive.yaml
src/steelhead_tasks/launch/: automated_competition_dropper_launch.py  automated_competition_gate_launch.py  automated_competition_octagon_launch.py  automated_competition_slalom_launch.py  automated_competition_slaloms_launch.py  automated_competition_torpedo_launch.py  timed_wrench_launch.py
src/steelhead_tasks/src/: automated_competition_dropper.cpp  automated_competition_gate.cpp  automated_competition_octagon.cpp  automated_competition_slalom.cpp  automated_competition_torpedo.cpp  hardcode_inputs.cpp  pitch_flip.cpp  timed_wrench.cpp  yaw_spin.cpp
src/steelhead_tasks/steelhead_tasks/: automated_competition_slaloms.py
(+566 files in other folders)
