<?xml version="1.0"?>
<package format="3">
  <name>gazebo</name>
  <version>0.0.1</version>
  <description>Steelhead Gazebo Simulation</description>

  <maintainer email="gyan.gyan26@gmail.com">Gyan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

