<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steelhead_mission_planner</name>
  <version>0.0.1</version>
  <description>
    Decision-tree mission planner for the Steelhead AUV.
    Reads task-completion strings from other nodes and sequences
    through mission states (Gate, Buoy, Torpedo, Octagon, …),
    publishing the current state on /State.
  </description>
  <maintainer email="todo@todo.com">steelhead</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
