<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steelhead_slaloms</name>
  <version>0.0.0</version>
  <description>Slalom pole detection and navigation for the Steelhead AUV</description>
  <maintainer email="todo@email.com">todo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>steelhead_vision_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>steelhead_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>